# scrapyduler

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  scrapyd.example.conf
.github/workflows/: python-test.yml
scrapyduler/: launcher.py
tests/: conftest.py  test_launcher.py  test_utils.py
