[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapyduler"
authors = [
    {name = "Dmitriy Chuenkov", email = "slymit@gmail.com"},
]
description = "Scrapyd launcher module that schedules scrapy spiders by time"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["scrapy", "scrapyd", "scheduler", "launcher"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "scrapyd~=1.6.0",
    "APScheduler==3.10.1",
    'importlib-metadata; python_version>="3.7"',
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/slymit/scrapyduler"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "mdformat>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["scrapyduler"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "scrapyduler.__version__"}

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

[tool.tox]
env_list = ["py310", "py311", "py312", "py313"]
minversion = "4.34.0"

[tool.tox.env_run_base]
allowlist_externals = ["make"]
usedevelop = true
extras = ["dev"]
commands = [
    ["make", "coverage", "ARGS=-x -vv"],
]
